# aictl

./: .aictl.example  .env.example  .gitignore  AICTL.md  ARCH.md  CLAUDE.md  Cargo.toml  ISSUES.md  LICENSE  LLM_PRICING.md  Makefile  README.md  ROADMAP.md  SERVER.md  build.rs  install-server.sh  install.sh
.aictl/: config
.aictl/agents/: brainstormer.md  budget-advisor.md  bug-hunter.md  copywriter.md  critic.md  data-analyst.md  decision-advisor.md  devils-advocate.md  image-specialist.md  journalist.md  kitesurfing-advisor.md  mindfulness-coach.md  psychologist.md  regex-expert.md  security-auditor.md  software-architect.md  spreadsheet-analyst.md  sql-expert.md  steelman.md  storyteller.md  sysadmin.md  ui-designer.md  workout-coach.md  writer.md
.aictl/skills/audit-deps/: SKILL.md
.aictl/skills/audit-wifi/: SKILL.md
.aictl/skills/check-cves/: SKILL.md
.aictl/skills/demix/: SKILL.md
.aictl/skills/draw-diagram/: SKILL.md
.aictl/skills/inspect-dns/: SKILL.md
.cargo/: config.toml
.claude/marketing/: PROMO_TEXT.md  PROMO_TEXT_X.md
.claude/other/: PROMO_TEXT.md
.claude/plans/: agent-templates.md  agents-remote-catalogue.md  cli-as-server-client.md  desktop-app.md  inter-instance-messaging.md  mcp-support.md  plugin-system.md  secure-tool-execution.md  sensitive-data-redaction.md  server.md  skill-templates.md  skills-remote-catalogue.md  skills.md
.claude/reports/: evaluate-2026-04-01_22-54-50.md  evaluate-2026-04-01_23-14-15.md  evaluate-rust-quality-2026-04-01_22-38-05.md
.github/workflows/: ci.yml  deploy-website.yml  deps.yml  release.yml  rust.yml
agents/: api-tester.md  critic.md  docker-operator.md  editor.md  first-principles-thinker.md  git-archaeologist.md  habit-coach.md  journal-coach.md  kubernetes-operator.md  mental-model-coach.md  prompt-engineer.md  psychologist.md  researcher.md  shell-expert.md  sleep-coach.md  threat-modeler.md  travel-planner.md  tutor.md  writer.md
crates/aictl-cli/: Cargo.toml  build.rs
crates/aictl-cli/src/: commands.rs  main.rs  repl.rs  ui.rs  version_cache.rs
crates/aictl-cli/src/commands/: agent.rs  compact.rs  config_wizard.rs  gguf.rs  help.rs  hooks.rs  info.rs  memory.rs  mlx.rs  model.rs  ping.rs  plugins.rs  retry.rs  security.rs  serve.rs  skills.rs  stats.rs  tools.rs  undo.rs  update.rs
crates/aictl-core/: Cargo.toml
crates/aictl-desktop/: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
crates/aictl-desktop/capabilities/: default.json
crates/aictl-desktop/icons/: icon.icns
crates/aictl-desktop/src/: chat.rs  lib.rs  main.rs  state.rs  ui.rs  workspace.rs
crates/aictl-desktop/src/commands/: agents.rs  chat.rs  context.rs  hooks.rs  images.rs  mcp.rs  mod.rs  models.rs  plugins.rs  server.rs  sessions.rs  settings.rs  skills.rs  stats.rs  system.rs  workspace.rs
crates/aictl-desktop/webview/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/aictl-desktop/webview/src/: App.tsx  main.tsx
crates/aictl-desktop/webview/src/components/: Chat.tsx  Composer.tsx  EmptyWorkspace.tsx  Settings.tsx  Sidebar.tsx  Titlebar.tsx  ToolApproval.tsx  Toolbar.tsx
crates/aictl-desktop/webview/src/lib/: ipc.ts  markdown.ts
crates/aictl-desktop/webview/src/styles/: components.css  tokens.css
crates/aictl-server/: Cargo.toml
crates/aictl-server/src/: auth.rs  config.rs  error.rs  log.rs  main.rs  master_key.rs  openai.rs  openapi.json  rate_limit.rs  sse.rs  state.rs  uninstall.rs  update.rs
crates/aictl-server/src/routes/: gateway.rs  health.rs  mod.rs  models.rs  openapi.rs  stats.rs
crates/cli/: Cargo.toml
crates/cli/src/: ui.rs  (+3 more)
crates/engine/: Cargo.toml
crates/engine/src/: config.rs  error.rs  lib.rs  llm.rs  message.rs  plugins.rs  security.rs  skills.rs  stats.rs  tools.rs
crates/engine/src/llm/: anthropic.rs  balance.rs  deepseek.rs  mistral.rs  mock.rs  ollama.rs  zai.rs
crates/engine/src/mcp/: protocol.rs
crates/engine/src/tools/: archive.rs  checksum.rs  geo.rs  image.rs  json_query.rs  lint.rs  list_processes.rs  notify.rs
examples/: config  hooks.json  mcp.json
skills/devils-advocate/: SKILL.md
skills/diagnose-network/: SKILL.md
skills/inspect-cert/: SKILL.md
skills/inspect-disk/: SKILL.md
skills/inspect-sockets/: SKILL.md
skills/investigate-error/: SKILL.md
skills/mindfulness/: SKILL.md
skills/news-brief/: SKILL.md
skills/plan-meals/: SKILL.md
skills/read-diagram/: SKILL.md
skills/recommend-books/: SKILL.md
skills/scan-secrets/: SKILL.md
skills/scan-wifi/: SKILL.md
skills/steelman/: SKILL.md
skills/suggest-recipe/: SKILL.md
skills/summarize/: SKILL.md
skills/update-docs/: SKILL.md
skills/weekly-review/: SKILL.md
skills/write-poem/: SKILL.md
skills/write-tests/: SKILL.md
src/: agents.rs  audit.rs  commands.rs  config.rs  error.rs  hooks.rs  integration_tests.rs  keys.rs  llm.rs  llm_anthropic.rs  llm_deepseek.rs  llm_gemini.rs  llm_gguf.rs  llm_grok.rs  llm_kimi.rs  llm_local.rs  llm_mistral.rs  llm_mlx.rs  llm_ollama.rs  llm_openai.rs  llm_zai.rs  main.rs  mcp.rs  message.rs  repl.rs  run.rs  security.rs  session.rs  skills.rs  stats.rs  tools.rs  ui.rs
src/agents/: remote.rs
src/commands/: agent.rs  balance.rs  behavior.rs  clipboard.rs  compact.rs  config_wizard.rs  gguf.rs  help.rs  hooks.rs  info.rs  mcp.rs  memory.rs  menu.rs  mlx.rs  model.rs  ping.rs  retry.rs  roadmap.rs  security.rs  skills.rs  tools.rs  uninstall.rs  update.rs
src/llm/: anthropic.rs  deepseek.rs  gemini.rs  gguf.rs  grok.rs  kimi.rs  mistral.rs  mlx.rs  mock.rs  mod.rs  ollama.rs  openai.rs  stream.rs  zai.rs
src/llm_mlx/: arch.rs
src/mcp/: config.rs  stdio.rs
src/security/: redaction.rs
src/skills/: remote.rs
src/tools/: calculate.rs  check_port.rs  clipboard.rs  csv_query.rs  datetime.rs  diff.rs  document.rs  filesystem.rs  git.rs  json_query.rs  notify.rs  run_code.rs  shell.rs  system_info.rs  util.rs  web.rs
website/: CLAUDE.md  README.md  build.ts  guides.html  index.html  llms.txt  package.json  script.js  serve.ts  server.html  style.css
website/.claude/: settings.local.json
(+79 files in other folders)
