[workspace]
members = ["crates/aictl-cli", "crates/aictl-core", "crates/aictl-server"]
resolver = "3"

# Shared package metadata. Both crates reference these via
# `field.workspace = true` so the release workflow only has to bump
# the version in one place.
[workspace.package]
version = "0.34.4"
edition = "2024"
repository = "https://github.com/pwittchen/aictl"
authors = ["Piotr Wittchen"]
license-file = "LICENSE"
